--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
     "manifest_version": 3,
-    "name": "Hello Extensions",
-    "description": "Base Level Extension",
+    "name": "QuickCalc",
+    "description": "Calculator Extension For Useful Math Formulas",
     "version": "1.0",
     "action": {
-      "default_popup": "hello.html",
-      "default_icon": "hello_extensions.png"
+      "default_popup": "quickCalc.html",
+      "default_icon": "quickCalc_extensions.png"
     }
   }
